--- a/src/components/BackgroundColors.astro
+++ b/src/components/BackgroundColors.astro
@@ -1,10 +1,12 @@
 ---
 const { type } = Astro.props;
 ---
+{
+    type == 'navBar' ? 
+    <header class=`background ${type}`><slot/></header> 
+    : <section class=`background ${type}`><slot /></section>
+}
 
-<div class=`background ${type}`>
-    <slot />
-</div>
 
 <style>
     .background {
@@ -19,7 +21,7 @@ const { type } = Astro.props;
             min-width: 300px;
             top: 0;
             left: 0;
-            z-index: 1000;
+            z-index: 100;
 
             &::after {
                 border-radius: 0;
@@ -33,22 +35,22 @@ const { type } = Astro.props;
 
         &.form-login {
             position: relative;
-            height: 55px;
             width: 95%;
-            height: 280px;
+            height: 300px;
             max-width: 400px;
             top: 0;
             left: 0;
-            z-index: 100;
+            z-index: 50;
         }
 
         &.form-signin {
             position: relative;
             width: 95%;
+            max-width: 650px;
             height: 750px;
             top: 0;
             left: 0;
-            z-index: 100;
+            z-index: 50;
         }
         &.money {
             position: relative;
@@ -131,7 +133,10 @@ const { type } = Astro.props;
         .background {
             &.form-signin {
                 height: 392.5px;
-                max-width: 900px;
+
+                #group__lastname2{
+                    display: none;
+                }
             }
         }
     }
