--- a/src/components/BrokerLogo.astro
+++ b/src/components/BrokerLogo.astro
@@ -7,8 +7,8 @@ import '@fontsource/audiowide';
     class=`icon`
     src=`src/icons/BrokerLogo.webp`
     alt="icono"
-    width="28"
-    height="28"
+    width="30"
+    height="30"
 />
     <h3>BrokerView</h3>
 </div>
@@ -17,7 +17,8 @@ import '@fontsource/audiowide';
         display: flex;
         align-items: center;
         user-select: none;
-        margin-left: .5rem;
+        margin-left: .25rem;
+        height: 100%;
     }
     h3{
         margin:0;
