--- a/src/components/svg/UserSVG.astro
+++ b/src/components/svg/UserSVG.astro
@@ -9,5 +9,5 @@
             d="M224 256a128 128 0 1 0 0-256 128 128 0 1 0 0 256zm-46 48C80 304 0 384 0 482c0 17 13 30 30 30h388c17 0 30-13 30-30 0-98-80-178-178-178h-92z"
         ></path></svg
     >
-    <h4>Cuenta</h4>
+    <p>Cuenta</p>
 </a>
