--- a/src/sections/Footer.astro
+++ b/src/sections/Footer.astro
@@ -1,34 +1,34 @@
 <footer>
-    <p>&copy; 2024 BrokerView. Todos los derechos reservados.</p>
-    <div id="background_footer"></div>
+    <p>&copy; 2024 BrokerView | Todos los derechos reservados.</p>
+    <span id="background_footer"></span>
 </footer>
 <style>
     footer {
         display: flex;
         flex-direction: column;
+        gap: 1px;
         width: 100%;
-        height: 30px;
-        margin-top: 3rem;
-        top: 100%;
+        height: 22.5px;
+        margin-top: 2rem;
 
         p {
             text-align: center;
+            letter-spacing: 1px;
             font-size: .7rem;
             margin: 0;
             color: var(--primary-color-text);
         }
 
-        div {
+        #background_footer {
             width: 100%;
-            height: 15px;
+            height: 7.5px;
         }
     }
     body.red {
         #background_footer {
             background: linear-gradient(
                 to top,
-                var(--red) 10%,
-                var(--primary-color),
+                var(--red-light) 10%,
                 transparent
             );
         }
@@ -37,8 +37,7 @@
         #background_footer {
             background: linear-gradient(
                 to top,
-                var(--green) 10%,
-                var(--primary-color),
+                var(--green-light) 10%,
                 transparent
             );
         }
@@ -46,28 +45,6 @@
     html.light {
         p {
             color: var(--secondary-color-text);
-        }
-
-        body.red {
-            #background_footer {
-                background: linear-gradient(
-                    to top,
-                    var(--red-light),
-                    var(--secondary-color) 50%,
-                    transparent 40%
-                );
-            }
-        }
-        body.green {
-            #background_footer {
-                background: linear-gradient(
-                    to top,
-                    var(--green),
-                    var(--green-light) 10%,
-                    var(--secondary-color),
-                    transparent
-                );
-            }
         }
     }
 </style>
