--- a/src/sections/MenuMobile.astro
+++ b/src/sections/MenuMobile.astro
@@ -7,6 +7,7 @@ import UserSVG from "@components/svg/UserSVG.astro";
 import "@styles/link-pages-svg.css";
 ---
 
+<div id="background__menu-mobile"></div>
 <section id="menu-mobile">
     <HouseSVG />
     <ChartSVG />
@@ -15,9 +16,24 @@ import "@styles/link-pages-svg.css";
 </section>
 
 <style>
-    #menu-mobile {
-        position: absolute;
+    #background__menu-mobile {
+        position: fixed;
         display: none;
+        width: 100%;
+        height: 100vh;
+        z-index: 190;
+        backdrop-filter: blur(5px);
+
+        &.appear {
+            display: flex;
+        }
+        &.appear ~ #menu-mobile {
+            display: flex;
+        }
+    }
+    #menu-mobile {
+        display: none;
+        position: fixed;
         justify-content: start;
         align-items: start;
         flex-direction: column;
@@ -26,12 +42,8 @@ import "@styles/link-pages-svg.css";
         padding-left: 1rem;
         height: 100vh;
         width: 50%;
-        z-index: 200;
+        z-index: 210;
         background-color: #232323dd;
-
-        &.appear {
-            display: flex;
-        }
     }
     body.red {
         #menu-mobile {
@@ -51,8 +63,11 @@ import "@styles/link-pages-svg.css";
         }
     }
     @media (width > 666px) {
-        #menu-mobile {
+        #background__menu-mobile {
             &.appear {
+                display: none;
+            }
+            &.appear ~ #menu-mobile {
                 display: none;
             }
         }
