--- a/src/sections/Navbar.astro
+++ b/src/sections/Navbar.astro
@@ -3,17 +3,22 @@ import BtnTheme from "@components/BtnTheme.astro";
 import BackgroundColors from "@components/BackgroundColors.astro";
 import BrokerLogo from "@components/BrokerLogo.astro";
 import HamburgerMenu from "@components/HamburgerMenu.astro";
+
+interface Props {
+	hamburger: string;
+}
+
+const {hamburger} = Astro.props
+
 ---
 
 <BackgroundColors type="navBar">
     <nav class="navBar">
-        <div class="navBar__container">
-            <div>
-                <HamburgerMenu />
-                <BrokerLogo />
-            </div>
-            <BtnTheme />
+        <div>
+            {!hamburger  && <HamburgerMenu/>}
+            <BrokerLogo />
         </div>
+        <BtnTheme />
     </nav>
 </BackgroundColors>
 
@@ -21,32 +26,20 @@ import HamburgerMenu from "@components/HamburgerMenu.astro";
     .navBar {
         position: relative;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         width: 100%;
-        height: 53px;
-        margin-bottom: 0.2rem;
-        background-color: var(--primary-color);
+        max-width: 1000px;
+        height: 40px;
+        padding: 0 10px;
+        z-index: 300;
 
-        .navBar__container {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+        & > div {
             position: relative;
-            margin: auto;
-            z-index: 300;
-            width: 100%;
-            max-width: 1000px;
-            height: 40px;
-            padding: 10px;
-
-            div{
-                position: relative;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                height: auto;
-            }
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
         }
     }
 </style>
