--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,23 +29,22 @@ body {
     display: flex;
     flex-direction: column;
     position: relative;
-    height: 100svh;
-    min-width: 300px;
+    min-height: 100svh;
+    width: 100%;
+    min-width: 290px;
     margin: 0;
     margin-top: 55px;
     padding: 0;
     background: var(--primary-color);
 }
 h1 {
+    font-weight: 100;
+    letter-spacing: 5px;
     color: var(--primary-color-text);
 }
 /* Theme mode styles */
 html.light {
     #body {
-        background-color: var(--secondary-color);
-    }
-
-    .navBar {
         background-color: var(--secondary-color);
     }
     h1 {
