--- a/src/styles/link-pages-svg.css
+++ b/src/styles/link-pages-svg.css
@@ -9,7 +9,7 @@
     gap: 1rem;
     background-color: var(--primary-color);
 }
-h4 {
+p {
     margin: 0;
     font-size: 1.3rem;
     letter-spacing: 2px;
